--- a/werf.yaml
+++ b/werf.yaml
@@ -4,6 +4,9 @@ configVersion: 1
 
 build:
   platform: [ linux/amd64 ]
+  
+  variables:
+    WERF_REPO: harbor.mymemorylog.com/test
 
 ---
 image: montalabs
