--- a/werf.yaml
+++ b/werf.yaml
@@ -4,9 +4,10 @@ configVersion: 1
 
 build:
   platform: [ linux/amd64 ]
-  
-  variables:
-    WERF_REPO: harbor.mymemorylog.com/test
+
+shell:
+  before:
+    - export WERF_REPO=harbor.mymemorylog.com/test
 
 ---
 image: montalabs
