--- a/werf.yaml
+++ b/werf.yaml
@@ -9,5 +9,5 @@ build:
 image: montalabs
 dockerfile: Dockerfile
 shell:
-  before:
+  beforeCommand:
     - export WERF_REPO=harbor.mymemorylog.com/test
